fixed the nav collapsing

--- a/style/main.css
+++ b/style/main.css
@@ -211,6 +211,7 @@ header {
 .nav-collapse ul {
   list-style: none;
   width: 100%;
+  height: 100%;
   float: left;
 }
 
